# Race_web_game

./: .gitignore  Makefile  README.md
docker_compose/: compose.yaml  server.yaml
src/: pyproject.toml
src/server/: Dockerfile  main.py  pyproject.toml  schemas.py  start_server.sh
src/server/app/db/: db_create.py
src/server/app/race/: main_logic.py
src/web_gui/: Dockerfile  index.html  package-lock.json  package.json
src/web_gui/src/: App.jsx  main.jsx
src/web_gui/src/components/game_board/: gameBoard.css  gameBoard.jsx  rowBoard.css  rowBoard.jsx
src/web_gui/src/components/websoket/: websocket.jsx
src/web_gui/src/services/: api.js
