[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["savkirill2012 <savkirill2012@gmail.com>"]
readme = "../../README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
